# kaokao

./: .gitignore  Cargo.toml  default.nix  flake.nix  readme.md  result  shell.nix  smth.json  something_else.csv  test.json
.github/workflows/: build.yml  clippy.yml  codecov.yml  test.yml
src/: builtins.rs  config.rs  main.rs  moji.rs  print.rs  rofi.rs
src/art/: creature.txt  gamebtw.txt  hashbang.txt  kittyface.txt  lovemyputer.txt
src/moji/: description.rs  file.rs  kaomoji.rs  mod.rs  recent.rs
src/moji/file/: mod.rs  test.csv  test.json
