[package]
name = "kaokao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.2.1"
directories = "4.0.1"
emojis = "0.5"
itertools = "0.10.5"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.155"
serde_json = { version = "1.0.94", features = ["std"] }
thiserror = "1.0.39"
