[package]
name = "kaokao"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.2"
directories = "4"
emojis = "0.6"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = { version = "1", features = ["std"] }
thiserror = "1"
